[package]
name = "chip8"
version = "1.0.0"
authors = ["Masato Bito <m@btmst.jp>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "<0.4"
log = "<0.5"
wasm-bindgen = "<0.3"

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
